frontend_tests/negative/excluded_goroutine/cmd/app/main.go
package main

func work() {}
func main() { go work() }
